--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ exif = "*"
 pillow = "*"
 numpy = "*"
 opencv-python = "*"
+matplotlib = "*"
+plotly = "==5.5.0"
+pandas = "*"
+formation-studio = "*"
+dash = "*"
 
 [dev-packages]
 
