--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ plotly = "==5.5.0"
 pandas = "*"
 formation-studio = "*"
 dash = "*"
+kivy = {extras = ["base"], version = "*"}
+kivy-examples = "*"
 
 [dev-packages]
 
