out here wil'in

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ formation-studio = "*"
 dash = "*"
 kivy-examples = "*"
 cython = "*"
+fastapi = {extras = ["all"], version = "*"}
 
 [dev-packages]
 
