Experiment web UI (#43)
* cleaned up tkintertest a bit

* out here wil'in

* removing some menu stuff I don't need

* switched from using pack widget management to grid

* seemingly feature parity with the previous tkinter version, slightly cleaned up UI, much better code organization

* loads images on initial load closes #15

* fixed reset progress bar after loading closes #29

* regenerated requirements.txt, hopefully dependabot will cut me some slack

* some inheritance to combine menu functionality for compare and home page views

* adding a compare screen

* added files to ignore closes #38

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ formation-studio = "*"
 dash = "*"
 kivy-examples = "*"
 cython = "*"
+fastapi = {extras = ["all"], version = "*"}
+monkeytype = "*"
 
 [dev-packages]
 
